--- a/.github/workflows/test_upload_assets.yml
+++ b/.github/workflows/test_upload_assets.yml
@@ -25,7 +25,7 @@ jobs:
           && echo "Test By ${date}" > test_actions.txt
 
       - name: Upload Test asset
-        uses: george012/upload-release-asset@latest
+        uses: george012/upload-release-asset@v1
         with:
           upload_url: ${{ env.UPLOAD_URL }}
           asset_path: ./test_actions.txt
